--- a/neelu project 1/Neelampathan CV.html
+++ b/neelu project 1/Neelampathan CV.html
@@ -106,7 +106,7 @@
     <div>
         <div class="row">
           <div class="col-sm-5 col-md-6"> 
-            <img src="C:\Users\saira\OneDrive\Desktop\neelu project 1\Neelam Photo.jpeg"  width="110" height="150"/>
+            <img src="Neelam Photo.jpg"  width="150" height="150"/>
             <h1>Neelam P Pathan</h1>
             <p class="header">Business Analyst & Digital Marketer</p>
         </div>
@@ -163,10 +163,10 @@
 
 <div class="bottom-container">
 
-    <a href="#" class="fa fa-facebook"></a>
-    <a href="#" class="fa fa-linkedin"></a>
+    <a href="https://www.facebook.com/neelamppathan" class="fa fa-facebook"></a>
+    <a href="https://www.linkedin.com/in/neelam-p-pathan-bb14342b" class="fa fa-linkedin"></a>
     
-    <a href="#" class="fa fa-instagram"></a>
+    <a href="https://instagram.com/neelampathan?igshid=MTIzZWQxMDU=" class="fa fa-instagram"></a>
     <div class="copyright">
         <p><a href="C:\Users\saira\OneDrive\Desktop\neelu project 1\contact.html">
             <button class="btn info">Contact Me</button>
